# fobos-gui

./: .gitignore  agents.md  app_model.py  calibration.json  constants.py  main.py  main_mock.py  main_window.py  positioner_centers.json  pyproject.toml  pyproject.toml.bak  readme  style.qss  test_qtransform.py
config/: laser_mapping.json  positioner_centers.json  readme
core/: __init__.py  app_model.py  hardware_manager.py  main_window.py  move_dispatcher.py
helpers/: 4pt_tf.py  annulus.py  calibration_io.py  circle_center.py  constants.py  drawing.py  geometry.py  metrology.py  projection.py
widgets/: camera_widget.py  control_panel.py  grid2d.py  pan_zoom_mixin.py  status_bar.py  view2D.py
workers/: fps_manager.py  mock_fps.py  positioner_worker.py  readme.md  stream_worker.py  test.py  verify_worker.py  vimba_worker.py
