# this project reqiures that you install the vimba X sdk, the version of vmbpy installed here relies on it.
# vimba X sdk can be found here https://www.alliedvision.com/en/support/software-downloads/vimba-x-sdk/vimba-x
[project]
name = "fobos-gui"
version = "0.1.0"
description = "FOBOS GUI application"
requires-python = ">=3.11"

dependencies = [
    "jaeger-core @ git+https://github.com/albireox/jaeger-core.git",
    "numpy",
    "PySide6",
    "qdarkstyle>=3.2.3",
    "vmbpy",
]

[tool.uv.sources]
vmbpy = { path = "vmbpy-1.0.4-py3-none-any.whl" }


